// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`paths > generates entryPaths 1`] = `
[
  {
    "params": {
      "locale": "de",
      "pages": "2020/09/11/testartikel",
    },
    "props": {
      "collection": "pages",
      "data": {
        "title": "Testartikel",
      },
      "id": "de/2020/09/11/test-article.md",
      "locale": "de",
      "slug": "de/2020/09/11/test-article",
      "translations": {
        "de": "/de/2020/09/11/testartikel",
        "en": "/2020/09/11/test-article",
      },
    },
  },
  {
    "params": {
      "locale": undefined,
      "pages": "2020/09/11/test-article",
    },
    "props": {
      "collection": "pages",
      "data": {
        "title": "Test Article",
      },
      "id": "en/2020/09/11/test-article.md",
      "locale": "en",
      "slug": "en/2020/09/11/test-article",
      "translations": {
        "de": "/de/2020/09/11/testartikel",
        "en": "/2020/09/11/test-article",
      },
    },
  },
]
`;

exports[`paths > generates entryPaths 2`] = `
[
  {
    "params": {
      "docs": "doku",
      "locale": "de",
      "slug": "2020/09/11/testartikel",
    },
    "props": {
      "collection": "docs",
      "data": {
        "title": "Testartikel",
      },
      "id": "de/2020/09/11/test-article.md",
      "locale": "de",
      "slug": "de/2020/09/11/test-article",
      "translations": {
        "de": "/de/doku/2020/09/11/testartikel",
        "en": "/docs/2020/09/11/test-article",
      },
    },
  },
  {
    "params": {
      "docs": "docs",
      "locale": undefined,
      "slug": "2020/09/11/test-article",
    },
    "props": {
      "collection": "docs",
      "data": {
        "title": "Test Article",
      },
      "id": "en/2020/09/11/test-article.md",
      "locale": "en",
      "slug": "en/2020/09/11/test-article",
      "translations": {
        "de": "/de/doku/2020/09/11/testartikel",
        "en": "/docs/2020/09/11/test-article",
      },
    },
  },
]
`;

exports[`paths > generates galleryCategoryIndexPaths 1`] = `
[
  {
    "params": {
      "category": "food",
      "gallery": "gallery",
      "index": "0",
      "locale": undefined,
    },
    "props": {
      "locale": "en",
      "next": "1",
      "page": {
        "src": "./food1.jpg",
      },
      "prev": undefined,
      "translations": {
        "de": "/de/galerie/essen",
        "en": "/gallery/food",
      },
    },
  },
  {
    "params": {
      "category": "food",
      "gallery": "gallery",
      "index": "1",
      "locale": undefined,
    },
    "props": {
      "locale": "en",
      "next": "2",
      "page": {
        "src": "./food2.jpg",
      },
      "prev": "0",
      "translations": {
        "de": "/de/galerie/essen",
        "en": "/gallery/food",
      },
    },
  },
  {
    "params": {
      "category": "food",
      "gallery": "gallery",
      "index": "2",
      "locale": undefined,
    },
    "props": {
      "locale": "en",
      "next": undefined,
      "page": {
        "src": "./food3.jpg",
      },
      "prev": "1",
      "translations": {
        "de": "/de/galerie/essen",
        "en": "/gallery/food",
      },
    },
  },
  {
    "params": {
      "category": "essen",
      "gallery": "galerie",
      "index": "0",
      "locale": "de",
    },
    "props": {
      "locale": "de",
      "next": "1",
      "page": {
        "src": "./food1.jpg",
      },
      "prev": undefined,
      "translations": {
        "de": "/de/galerie/essen",
        "en": "/gallery/food",
      },
    },
  },
  {
    "params": {
      "category": "essen",
      "gallery": "galerie",
      "index": "1",
      "locale": "de",
    },
    "props": {
      "locale": "de",
      "next": "2",
      "page": {
        "src": "./food2.jpg",
      },
      "prev": "0",
      "translations": {
        "de": "/de/galerie/essen",
        "en": "/gallery/food",
      },
    },
  },
  {
    "params": {
      "category": "essen",
      "gallery": "galerie",
      "index": "2",
      "locale": "de",
    },
    "props": {
      "locale": "de",
      "next": undefined,
      "page": {
        "src": "./food3.jpg",
      },
      "prev": "1",
      "translations": {
        "de": "/de/galerie/essen",
        "en": "/gallery/food",
      },
    },
  },
  {
    "params": {
      "category": "sea",
      "gallery": "gallery",
      "index": "0",
      "locale": undefined,
    },
    "props": {
      "locale": "en",
      "next": "1",
      "page": {
        "src": "./sea1.jpg",
      },
      "prev": undefined,
      "translations": {
        "de": "/de/galerie/meer",
        "en": "/gallery/sea",
      },
    },
  },
  {
    "params": {
      "category": "sea",
      "gallery": "gallery",
      "index": "1",
      "locale": undefined,
    },
    "props": {
      "locale": "en",
      "next": "2",
      "page": {
        "src": "./sea2.jpg",
      },
      "prev": "0",
      "translations": {
        "de": "/de/galerie/meer",
        "en": "/gallery/sea",
      },
    },
  },
  {
    "params": {
      "category": "sea",
      "gallery": "gallery",
      "index": "2",
      "locale": undefined,
    },
    "props": {
      "locale": "en",
      "next": "3",
      "page": {
        "src": "./sea3.jpg",
      },
      "prev": "1",
      "translations": {
        "de": "/de/galerie/meer",
        "en": "/gallery/sea",
      },
    },
  },
  {
    "params": {
      "category": "sea",
      "gallery": "gallery",
      "index": "3",
      "locale": undefined,
    },
    "props": {
      "locale": "en",
      "next": undefined,
      "page": {
        "src": "./sea4.jpg",
      },
      "prev": "2",
      "translations": {
        "de": "/de/galerie/meer",
        "en": "/gallery/sea",
      },
    },
  },
  {
    "params": {
      "category": "meer",
      "gallery": "galerie",
      "index": "0",
      "locale": "de",
    },
    "props": {
      "locale": "de",
      "next": "1",
      "page": {
        "src": "./sea1.jpg",
      },
      "prev": undefined,
      "translations": {
        "de": "/de/galerie/meer",
        "en": "/gallery/sea",
      },
    },
  },
  {
    "params": {
      "category": "meer",
      "gallery": "galerie",
      "index": "1",
      "locale": "de",
    },
    "props": {
      "locale": "de",
      "next": "2",
      "page": {
        "src": "./sea2.jpg",
      },
      "prev": "0",
      "translations": {
        "de": "/de/galerie/meer",
        "en": "/gallery/sea",
      },
    },
  },
  {
    "params": {
      "category": "meer",
      "gallery": "galerie",
      "index": "2",
      "locale": "de",
    },
    "props": {
      "locale": "de",
      "next": "3",
      "page": {
        "src": "./sea3.jpg",
      },
      "prev": "1",
      "translations": {
        "de": "/de/galerie/meer",
        "en": "/gallery/sea",
      },
    },
  },
  {
    "params": {
      "category": "meer",
      "gallery": "galerie",
      "index": "3",
      "locale": "de",
    },
    "props": {
      "locale": "de",
      "next": undefined,
      "page": {
        "src": "./sea4.jpg",
      },
      "prev": "2",
      "translations": {
        "de": "/de/galerie/meer",
        "en": "/gallery/sea",
      },
    },
  },
  {
    "params": {
      "category": "space",
      "gallery": "gallery",
      "index": "0",
      "locale": undefined,
    },
    "props": {
      "locale": "en",
      "next": "1",
      "page": {
        "src": "./space1.jpg",
      },
      "prev": undefined,
      "translations": {
        "de": "/de/galerie/weltraum",
        "en": "/gallery/space",
      },
    },
  },
  {
    "params": {
      "category": "space",
      "gallery": "gallery",
      "index": "1",
      "locale": undefined,
    },
    "props": {
      "locale": "en",
      "next": "2",
      "page": {
        "src": "./space2.jpg",
      },
      "prev": "0",
      "translations": {
        "de": "/de/galerie/weltraum",
        "en": "/gallery/space",
      },
    },
  },
  {
    "params": {
      "category": "space",
      "gallery": "gallery",
      "index": "2",
      "locale": undefined,
    },
    "props": {
      "locale": "en",
      "next": "3",
      "page": {
        "src": "./space3.jpg",
      },
      "prev": "1",
      "translations": {
        "de": "/de/galerie/weltraum",
        "en": "/gallery/space",
      },
    },
  },
  {
    "params": {
      "category": "space",
      "gallery": "gallery",
      "index": "3",
      "locale": undefined,
    },
    "props": {
      "locale": "en",
      "next": "4",
      "page": {
        "src": "./space4.jpg",
      },
      "prev": "2",
      "translations": {
        "de": "/de/galerie/weltraum",
        "en": "/gallery/space",
      },
    },
  },
  {
    "params": {
      "category": "space",
      "gallery": "gallery",
      "index": "4",
      "locale": undefined,
    },
    "props": {
      "locale": "en",
      "next": undefined,
      "page": {
        "src": "./space5.jpg",
      },
      "prev": "3",
      "translations": {
        "de": "/de/galerie/weltraum",
        "en": "/gallery/space",
      },
    },
  },
  {
    "params": {
      "category": "weltraum",
      "gallery": "galerie",
      "index": "0",
      "locale": "de",
    },
    "props": {
      "locale": "de",
      "next": "1",
      "page": {
        "src": "./space1.jpg",
      },
      "prev": undefined,
      "translations": {
        "de": "/de/galerie/weltraum",
        "en": "/gallery/space",
      },
    },
  },
  {
    "params": {
      "category": "weltraum",
      "gallery": "galerie",
      "index": "1",
      "locale": "de",
    },
    "props": {
      "locale": "de",
      "next": "2",
      "page": {
        "src": "./space2.jpg",
      },
      "prev": "0",
      "translations": {
        "de": "/de/galerie/weltraum",
        "en": "/gallery/space",
      },
    },
  },
  {
    "params": {
      "category": "weltraum",
      "gallery": "galerie",
      "index": "2",
      "locale": "de",
    },
    "props": {
      "locale": "de",
      "next": "3",
      "page": {
        "src": "./space3.jpg",
      },
      "prev": "1",
      "translations": {
        "de": "/de/galerie/weltraum",
        "en": "/gallery/space",
      },
    },
  },
  {
    "params": {
      "category": "weltraum",
      "gallery": "galerie",
      "index": "3",
      "locale": "de",
    },
    "props": {
      "locale": "de",
      "next": "4",
      "page": {
        "src": "./space4.jpg",
      },
      "prev": "2",
      "translations": {
        "de": "/de/galerie/weltraum",
        "en": "/gallery/space",
      },
    },
  },
  {
    "params": {
      "category": "weltraum",
      "gallery": "galerie",
      "index": "4",
      "locale": "de",
    },
    "props": {
      "locale": "de",
      "next": undefined,
      "page": {
        "src": "./space5.jpg",
      },
      "prev": "3",
      "translations": {
        "de": "/de/galerie/weltraum",
        "en": "/gallery/space",
      },
    },
  },
]
`;

exports[`paths > generates galleryCategoryPaths 1`] = `
[
  {
    "params": {
      "category": "food",
      "gallery": "gallery",
      "locale": undefined,
    },
    "props": {
      "locale": "en",
      "page": {
        "cover": "./food1.jpg",
        "images": [
          {
            "src": "./food1.jpg",
          },
          {
            "src": "./food2.jpg",
          },
          {
            "src": "./food3.jpg",
          },
        ],
        "title": {
          "de": "Essen",
          "en": "Food",
        },
      },
      "translations": {
        "de": "/de/galerie/essen",
        "en": "/gallery/food",
      },
    },
  },
  {
    "params": {
      "category": "essen",
      "gallery": "galerie",
      "locale": "de",
    },
    "props": {
      "locale": "de",
      "page": {
        "cover": "./food1.jpg",
        "images": [
          {
            "src": "./food1.jpg",
          },
          {
            "src": "./food2.jpg",
          },
          {
            "src": "./food3.jpg",
          },
        ],
        "title": {
          "de": "Essen",
          "en": "Food",
        },
      },
      "translations": {
        "de": "/de/galerie/essen",
        "en": "/gallery/food",
      },
    },
  },
  {
    "params": {
      "category": "sea",
      "gallery": "gallery",
      "locale": undefined,
    },
    "props": {
      "locale": "en",
      "page": {
        "cover": "./sea1.jpg",
        "images": [
          {
            "src": "./sea1.jpg",
          },
          {
            "src": "./sea2.jpg",
          },
          {
            "src": "./sea3.jpg",
          },
          {
            "src": "./sea4.jpg",
          },
        ],
        "title": {
          "de": "Meer",
          "en": "Sea",
        },
      },
      "translations": {
        "de": "/de/galerie/meer",
        "en": "/gallery/sea",
      },
    },
  },
  {
    "params": {
      "category": "meer",
      "gallery": "galerie",
      "locale": "de",
    },
    "props": {
      "locale": "de",
      "page": {
        "cover": "./sea1.jpg",
        "images": [
          {
            "src": "./sea1.jpg",
          },
          {
            "src": "./sea2.jpg",
          },
          {
            "src": "./sea3.jpg",
          },
          {
            "src": "./sea4.jpg",
          },
        ],
        "title": {
          "de": "Meer",
          "en": "Sea",
        },
      },
      "translations": {
        "de": "/de/galerie/meer",
        "en": "/gallery/sea",
      },
    },
  },
  {
    "params": {
      "category": "space",
      "gallery": "gallery",
      "locale": undefined,
    },
    "props": {
      "locale": "en",
      "page": {
        "cover": "./space1.jpg",
        "images": [
          {
            "src": "./space1.jpg",
          },
          {
            "src": "./space2.jpg",
          },
          {
            "src": "./space3.jpg",
          },
          {
            "src": "./space4.jpg",
          },
          {
            "src": "./space5.jpg",
          },
        ],
        "title": {
          "de": "Weltraum",
          "en": "Space",
        },
      },
      "translations": {
        "de": "/de/galerie/weltraum",
        "en": "/gallery/space",
      },
    },
  },
  {
    "params": {
      "category": "weltraum",
      "gallery": "galerie",
      "locale": "de",
    },
    "props": {
      "locale": "de",
      "page": {
        "cover": "./space1.jpg",
        "images": [
          {
            "src": "./space1.jpg",
          },
          {
            "src": "./space2.jpg",
          },
          {
            "src": "./space3.jpg",
          },
          {
            "src": "./space4.jpg",
          },
          {
            "src": "./space5.jpg",
          },
        ],
        "title": {
          "de": "Weltraum",
          "en": "Space",
        },
      },
      "translations": {
        "de": "/de/galerie/weltraum",
        "en": "/gallery/space",
      },
    },
  },
]
`;

exports[`paths > generates indexPaths 1`] = `
[
  {
    "params": {
      "locale": undefined,
    },
    "props": {
      "locale": "en",
      "translations": {
        "de": "/de",
        "en": "/",
      },
    },
  },
  {
    "params": {
      "locale": "de",
    },
    "props": {
      "locale": "de",
      "translations": {
        "de": "/de",
        "en": "/",
      },
    },
  },
]
`;

exports[`paths > generates indexPaths with kind 1`] = `
[
  {
    "params": {
      "docs": "docs",
      "locale": undefined,
    },
    "props": {
      "locale": "en",
      "translations": {
        "de": "/de/doku",
        "en": "/docs",
      },
    },
  },
  {
    "params": {
      "docs": "doku",
      "locale": "de",
    },
    "props": {
      "locale": "de",
      "translations": {
        "de": "/de/doku",
        "en": "/docs",
      },
    },
  },
]
`;

exports[`paths > generates rssXmlPaths 1`] = `
[
  {
    "params": {
      "locale": undefined,
    },
    "props": {
      "locale": undefined,
    },
  },
  {
    "params": {
      "locale": "-en",
    },
    "props": {
      "locale": "en",
    },
  },
  {
    "params": {
      "locale": "-de",
    },
    "props": {
      "locale": "de",
    },
  },
]
`;
